--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h1 class="mb-4 glow">About me</h1>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/pdp.jpg" alt="" srcset="" class="img-fluid">
+                    <img src="images/pdp.jpg" alt="" srcset="" class="img-fluid pdp">
                 </div>
                 <div class="col-md-8">
                     <h2 class="mb-4">Diaeddine LYAMANI</h2>
@@ -90,41 +90,45 @@
                             <div class="card dark-overlay">
                                 <img src="cyber-3400789_640.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                  <p class="card-text">Last updated 3 mins ago</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text">Last updated 3 mins ago</p>
                                 </div>
-                              </div>
+                            </div>
                         </div>
                         <div class="col-md-6 my-3">
                             <div class="card dark-overlay">
                                 <img src="11673.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                  <p class="card-text">Last updated 3 mins ago</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text">Last updated 3 mins ago</p>
                                 </div>
-                              </div>
+                            </div>
                         </div>
                         <div class="col-md-6 my-3">
                             <div class="card dark-overlay">
                                 <img src="11673.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                  <p class="card-text">Last updated 3 mins ago</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text">Last updated 3 mins ago</p>
                                 </div>
-                              </div>
+                            </div>
                         </div>
                         <div class="col-md-6 my-3">
                             <div class="card dark-overlay">
                                 <img src="11673.jpg" class="card-img" alt="...">
                                 <div class="card-img-overlay">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                  <p class="card-text">Last updated 3 mins ago</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text">Last updated 3 mins ago</p>
                                 </div>
-                              </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -153,15 +157,15 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    Setting up a Customer Relationship Management (CRM) system which is SuiteCRM, in a
+                                    Set up a Customer Relationship Management (CRM) system which is SuiteCRM, in a
                                     docker environement
                                 </div>
                                 <div class="col-12">
                                     <ul>
                                         <li>Study and comparison betweens CRM systems</li>
                                         <li>Design use case and class UML diagrams</li>
-                                        <li>Set up for a docker environement for SuiteCRM and its database</li>
-                                        <li>Fix some bugs</li>
+                                        <li>Set up of a docker environement for SuiteCRM and its database</li>
+                                        <li>Fix of some bugs</li>
                                     </ul>
                                 </div>
                                 <div class="col-12 my-2">
@@ -793,12 +797,54 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laudantium neque molestiae ea.</p>
         </div>
 
-        <div class="container dark-overlay py-4 px-3 px-md-5 mb-5" id="certificates">
+        <div class="container dark-overlay py-4 px-3 px-md-5 mb-5 text-md-left text-center" id="certificates">
             <h1 class="mb-4 glow">Certificates</h1>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cupiditate, quidem
-                aspernatur deserunt ratione incidunt accusamus sunt sit magnam nesciunt laboriosam quae officia dolores
-                nulla quisquam quos velit dolore amet.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laudantium neque molestiae ea.</p>
+            <div class="row">
+                <div class="col-md-4 my-3">
+                    <button class="btn btn-flat p-0 showcertif position-relative" data-toggle="modal" data-target="#certifmodal"
+                        data-image="certif1.png" data-toggle="tooltip" data-placement="left" title="Aperçu">
+                        <img src="/images/certificates/certif1.png" alt="" class="img-fluid">
+                        <div class="text-white position-absolute dark-overlay w-100 h-25 glow row align-items-center">
+                            <div class="col-12">
+                                <a target="_blank" href="https://www.google.com" class="text-decoration-none text-white">Machine Learning with python</a>
+                            </div>
+                        </div>
+                    </button>
+                </div>
+                <div class="col-md-4 my-3">
+                    <button class="btn btn-flat p-0 showcertif position-relative" data-toggle="modal" data-target="#certifmodal"
+                    data-image="certif1.png" data-toggle="tooltip" data-placement="left" title="Aperçu">
+                    <img src="/images/certificates/certif1.png" alt="" class="img-fluid">
+                    <div class="text-white position-absolute dark-overlay w-100 h-25 glow row align-items-center">
+                        <div class="col-12">
+                            <a target="_blank" href="https://www.google.com" class="text-decoration-none text-white">Machine Learning with python</a>
+                        </div>
+                    </div>
+                </button>
+                </div>
+                <div class="col-md-4 my-3">
+                    <button class="btn btn-flat p-0 showcertif position-relative" data-toggle="modal" data-target="#certifmodal"
+                        data-image="certif1.png" data-toggle="tooltip" data-placement="left" title="Aperçu">
+                        <img src="/images/certificates/certif1.png" alt="" class="img-fluid">
+                        <div class="text-white position-absolute dark-overlay w-100 h-25 glow row align-items-center">
+                            <div class="col-12">
+                                <a target="_blank" href="https://www.google.com" class="text-decoration-none text-white">Machine Learning with python</a>
+                            </div>
+                        </div>
+                    </button>
+                </div>
+                <div class="col-md-4 my-3">
+                    <button class="btn btn-flat p-0 showcertif position-relative" data-toggle="modal" data-target="#certifmodal"
+                        data-image="certif1.png" data-toggle="tooltip" data-placement="left" title="Aperçu">
+                        <img src="/images/certificates/certif1.png" alt="" class="img-fluid">
+                        <div class="text-white position-absolute dark-overlay w-100 h-25 glow row align-items-center">
+                            <div class="col-12">
+                                <a target="_blank" href="https://www.google.com" class="text-decoration-none text-white">Machine Learning with python</a>
+                            </div>
+                        </div>
+                    </button>
+                </div>
+            </div>
         </div>
 
         <div class="container dark-overlay py-4 px-3 px-md-5 mb-5" id="contact">
@@ -857,14 +903,33 @@
                             www.freepik.com</a>
                     </p>
                     <p>
-                        Image by <a href="https://pixabay.com/users/thedigitalartist-202249/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3400789">Pete Linforth</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3400789">Pixabay</a>
+                        Image by <a
+                            href="https://pixabay.com/users/thedigitalartist-202249/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3400789">Pete
+                            Linforth</a> from <a
+                            href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3400789">Pixabay</a>
                     </p>
                     <p>
-                        <a href='https://www.freepik.com/photos/technology'>Technology photo created by kjpargeter - www.freepik.com</a>
+                        <a href='https://www.freepik.com/photos/technology'>Technology photo created by kjpargeter -
+                            www.freepik.com</a>
                     </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Aperçu image-->
+    <div class="modal fade" id="certifmodal" data-keyboard="false" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl-2">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="row justify-content-center">
+                        <div class="col-12 text-center">
+                            <img src="" class="img-fluid">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
