Experience content correction

--- a/index.html
+++ b/index.html
@@ -198,14 +198,14 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    Developping a web application about candidates management
+                                    Developed a web application about candidates management
                                 </div>
                                 <div class="col-12">
                                     <ul>
                                         <li>Estabilish specifications of the project</li>
                                         <li>Design use case and class UML diagrams</li>
                                         <li>Develop the Frontend and Backend of the web application </li>
-                                        <li>Fix some bugs</li>
+                                        <li>Fix of some bugs</li>
                                     </ul>
                                 </div>
                                 <div class="col-12 my-2">
@@ -242,14 +242,11 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    Developping of a template for an hotel restaurant
+                                    Developed of a template for an hotel restaurant
                                 </div>
                                 <div class="col-12">
                                     <ul>
-                                        <li>Develop the Frontend part</li>
-                                        <li>Design of use case and class UML diagrams</li>
-                                        <li>Set up for a docker environement for SuiteCRM and its database</li>
-                                        <li>Fix some bugs</li>
+                                        <li>Develop of the Frontend part</li>
                                     </ul>
                                 </div>
                                 <div class="col-12 my-2">
